<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit"
            android:inputType="text" />

        <EditText
            android:id="@+id/editText_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/gray"
                android:onClick="addNumber"
                android:text="@string/addButton"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/gray"
                android:onClick="subNumber"
                android:text="@string/subButton"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/gray"
                android:onClick="divNumber"
                android:text="@string/divButton"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button_mul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/gray"
                android:onClick="mulNumber"
                android:text="@string/mulButton"
                android:textColor="@color/black" />
        </LinearLayout>

        <Button
            android:id="@+id/button_pow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/gray"
            android:onClick="powNumber"
            android:text="@string/powButton"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/Text_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14pt"
            android:text="@string/text" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>